# NeuronPlotLib

./: README.md  setup.cfg  setup.py
demo/: demo_modality_plot.py  run_demo.bat  run_demo.ps1  run_demo.sh
demo/demo_data/: generate_modality_data.py  modality_data.csv
src/NeuronPlotLib/: __init__.py  __main__.py  modality_plot.py  parse_csv.py
