[metadata]      
name = NeuronPlotLib
license =
description = Simple tool to make extended scientific diagrams
long_description = file: README.md, LICENSE
author = stemonitis
author_email =
url = https://github.com/stemonitis/NeuronPlotLib
keywords = Visualization, Plotting, Matplotlib
classifiers=
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Visualization

[options]
package_dir=
    =src
packages = find:
python_requires = >=3.3
install_requires = 
    matplotlib
    numpy

[options.packages.find]
where=src
exclude =
    demo*

[options.entry_points]


[options.package_data]

